# python-example

./: .coveragerc  .editorconfig  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .tool-versions  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test_server.tavern.yaml  utils.py
.github/: dependabot.yml
.github/workflows/: docker_build_push_deploy.yml  helm.yaml  pre-commit.yaml  release.yml
docker/: Dockerfile
docker/tests/: unit-test.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
helm/tests/: deployment_test.yaml  namesOverride_test.yaml  service_test.yaml
helm/tests/__snapshot__/: deployment_test.yaml.snap
helm/tests/values/: image.yaml
tests/: test_app.py
